--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,35 @@ body {
 	margin: 2%;
 }
 
+.container {
+	height: 200px;
+	width: fit-content;
+	overflow: auto;
+}
+
+.container::-webkit-scrollbar {
+	width: 10px;
+}
+.container::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	background-color: #cacaca;
+}
+.container::-webkit-scrollbar-track {
+	background-color: #f3f3f3;
+	border-radius: 8px;
+	box-shadow: inset 0px 0px 5px white;
+}
+
+thead th {
+	border-bottom: none !important;
+	position: sticky;
+	top: 0;
+}
+
 table {
 	border-collapse: collapse;
-	/* border-spacing: 0; */
-	border-radius: 5px;
+	border-spacing: 0;
 	border: hidden;
-	overflow: hidden;
 	box-shadow: 0 0 0 1px #e6e6e6;
 }
 
@@ -27,8 +50,10 @@ th {
 	background-color: #f0f4f9;
 }
 
-thead tr th {
+thead {
 	border-bottom: none !important;
+	position: sticky;
+	top: 0;
 }
 
 tbody tr:first-child td {
